--- a/ProfileScreenApp/app/build.gradle
+++ b/ProfileScreenApp/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
